DBTOOLS-1632 added javadocs for core package